--- a/BaiTapGithub_DALTUDTXD_0223967_68TH4/BaiTapGithub_DALTUDTXD_0223967_68TH4/MVVM/Views/LoginViews.xaml
+++ b/BaiTapGithub_DALTUDTXD_0223967_68TH4/BaiTapGithub_DALTUDTXD_0223967_68TH4/MVVM/Views/LoginViews.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BaiTapGithub_DALTUDTXD_0223967_68TH4.MVVM.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="150" d:DesignWidth="250">
     <Grid>
-            
+        <Button Content="click me"/>
     </Grid>
 </UserControl>
